# kubewatch

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  config.yaml  public.gpg
.github/workflows/: ci-release-deploy.yml  tests.yml
debian/: kubewatch.service  postinst
dists/stable/: InRelease  Release  Release.gpg
dists/stable/main/binary-amd64/: Packages
pool/main/h/kubewatch/: kubewatch_0.0.3-1_amd64.deb
src/: command.rs  config.rs  file_state.rs  main.rs  watcher.rs
tests/: integration_test.rs
